[package]
name = "solana-spinup"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A spinup tool that scaffolds a solana project alongside its base dependencies"
authors = ["Fuad Olaleye <leyefuad@gmail.com>"]

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs_extra = "1.2"

[[bin]]
name="solana-spinup"
path="src/main.rs"
